Anexo Requisitos y nombre tutor en memoria. [#13]

--- a/doc/proyectdoc/anexos.tex
+++ b/doc/proyectdoc/anexos.tex
@@ -345,9 +345,9 @@
 
 
 % Datos de portada
-\title{UBULog-1.0 \\Documentación Técnica}
+\title{UBULog-1.1 \\Documentación Técnica}
 \author{Oscar Fernández Armengol}
-\tutor{Raúl Marticorena Sanchez}
+\tutor{Raúl Marticorena Sánchez}
 \date{\today}
 
 \begin{document}
