--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -5,6 +5,13 @@
 	year      = "2017"
 }
 
+@book{claudia:anexo,
+	title = {{Anexo tfg, 2017 }},
+	author    = "Martínez Herrero, Claudia"
+	title     = "Anexo tfg UBUGrades",
+	year      = "2017"
+}
+
 @misc{Java:htmlunit,
 	title = {{HtmlUnit – Welcome to HtmlUnit}},
 	url = {http://htmlunit.sourceforge.net/},
