--- a/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -42,5 +42,7 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 	Al descargar el log, hay unos select que nos permite elegir ciertas opciones para filtrar los log y después descargar esos log. Habría que implementar para que el usuario se pueda descargar el log automáticamente modificando esas opciones.
 	\item
 	Implementar traducciones para tener una aplicación en diferentes idiomas.
+	\item
+	Ampliar formatos de lectura de registros a xlsx, html, jsom, odt.
 	
 \end{itemize}
