--- a/doc/proyectdoc/bibliografiaAnexos.bib
+++ b/doc/proyectdoc/bibliografiaAnexos.bib
@@ -1,3 +1,17 @@
+@book{claudia,
+	title = {{Memoria tfg, 2017 }},
+	author    = "Martínez Herrero, Claudia"
+	title     = "Memoria tfg UBUGrades",
+	year      = "2017"
+}
+
+@book{claudia:anexo,
+	title = {{Anexo tfg, 2017 }},
+	author    = "Martínez Herrero, Claudia"
+	title     = "Anexo tfg UBUGrades",
+	year      = "2017"
+}
+
 @misc{Java:htmlunit,
 	title = {{HtmlUnit – Welcome to HtmlUnit}},
 	url = {http://htmlunit.sourceforge.net/},
