--- a/doc/proyectdoc/tex/A_Plan_proyecto.tex
+++ b/doc/proyectdoc/tex/A_Plan_proyecto.tex
@@ -325,7 +325,7 @@ En el desglose podemos diferenciarlo en las siguientes categorías.
 
 El proyecto se lleva a cabo por un programador a media jornada ya que esta de practicas en otra empresa 25H/S, empezando en Octubre del 2017 asta Enero del 2018.
 
-\tablaSmall{Coste personal}{l c c}{costepersonal}
+\tablaSmallSinColores{Coste personal}{l c c}{costepersonal}
 { \multicolumn{1}{c }{Concepto} & Coste \\}{ 
 	Salario mensual bruto & 1.300\\
 	IRPF (10\%) & 130 \\
@@ -339,7 +339,7 @@ El proyecto se lleva a cabo por un programador a media jornada ya que esta de pr
 
 El proyecto se realiza con el ordenador personal y se considera la amortización a 5 años y se utiliza durante 3 meses y medio.
 
-\tablaSmall{Coste hardware}{l c c}{costehardware}
+\tablaSmallSinColores{Coste hardware}{l c c}{costehardware}
 { \multicolumn{1}{l}{Concepto} & Coste & Coste amortizado \\}{ 
 	Portatil & 1.000 & 4.86 \\
 	\\
@@ -357,7 +357,7 @@ Si lo observamos en ese sentido se podría cobrear 500 euros por licencia, para 
 
 En esta sección hablaremos de la viabilidad del software utilizado, de si las licencias nos permiten la explotación del mismo o su propia utilización.
 
-\tablaSmall{Viabilidad legal }{l c c c c}{viabilidadlegal}
+\tablaSmallSinColores{Viabilidad legal }{l c c c c}{viabilidadlegal}
 { \multicolumn{1}{l}{Herramientas} & Licencia \\}{ 
 	commons-codec1.9 & \href{http://www.apache.org/licenses/LICENSE-2.0.txt}{ Apache License Version 2.0} \\
 	commons-csv-1.5 & \href{http://www.apache.org/licenses/LICENSE-2.0.txt}{ Apache License Version 2.0} \\
