--- a/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -1,6 +1,6 @@
 \capitulo{7}{Conclusiones y Líneas de trabajo futuras}
 
-En esta ultima sección expondremos las conclusiones del trabajo realizado y las lineas futuras que se podrán seguir.
+En esta última sección expondremos las conclusiones del trabajo realizado y las líneas futuras que se podrán seguir.
 
 \section{Conclusiones}\label{conclusiones}
 
@@ -10,19 +10,19 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 	\tightlist
 	\item
 	El objetivo general del proyecto se ha cumplido satisfactoriamente.
-	Ahora los profesores cuentan con una aplicación para poder ver las interacciones de los diferentes usuarios, y hacer comprobaciones entre equipos de alumnos para saber quien a interaccionado con ubu-virtual y quien no, para tener un análisis mas detallado.
+	Ahora los profesores cuentan con una aplicación para poder ver las interacciones de los diferentes usuarios, y hacer comprobaciones entre equipos de alumnos para saber quíen ha interaccionado con ubu-virtual y quien no, para tener un análisis más detallado.
 	\item
-	El proyecto a sido desarrollado con un claro pensamiento de mantenibilidad. Esto ha conllevado que al hacer algún cambio de implementación, el tiempo invertido en ello era mínimo. Esta ultima consideración esta ligada también a una nueva implementación.
+	El proyecto ha sido desarrollado con un claro pensamiento de mantenibilidad. Esto ha conllevado que, al hacer algún cambio de implementación, el tiempo invertido en ello era mínimo. Esta última consideración está ligada también a una nueva implementación.
 	\item
-	Se a observado la importancia de las herramientas como travis o sonarqube para el desarrollo.
+	Se ha observado la importancia de las herramientas como travis o sonarqube para el desarrollo.
 	\item
-	El editor de \LaTeX\ ha sido de gran ayuda en la documentación, aunque se este mas acostumbrado a word o writer, a sido bueno el aprendizaje de esta tecnología para futuros usos en las empresas privadas.
+	El editor de \LaTeX\ ha sido de gran ayuda en la documentación, aunque sea de mayor costumbre utilizar word o writer, ha sido bueno el aprendizaje de esta tecnología para futuros usos en las empresas privadas.
 	\item
 	Hay que tener cuidado con la documentación que existe en internet, aunque sea la oficial, en alguna librería utilizada la documentación conducía a errores de implementación y hay que observar el propio código.
 	\item
-	Al utilizar la metodología ágil scrum, se ha desarrollado el proyecto de la forma mas profesional posible, sufriendo la presión de las entregas, lo que sera habitual en el entorno laboral.
+	Al utilizar la metodología ágil scrum, se ha desarrollado el proyecto de la forma más profesional posible, sufriendo la presión de las entregas, lo que será habitual en el entorno laboral.
 	\item
-	Es complicado la calcular la duración de los issue, se puede decir, que he sido optimista en el calculo, excepto en un par de issue los demás se finalizaban antes de lo esperado.
+	Es complicado calcular la duración de los issue, se puede decir, que he sido optimista en el cálculo, excepto en un par de issue los demás se finalizaban antes de lo esperado.
 	
 \end{itemize}
 
@@ -31,13 +31,13 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 \begin{itemize}
 	\tightlist
 	\item
-	Buscar funciones de la API Web Service de moodle para dar información mas concreta al usuario, diciéndole, por ejemplo, información concreta de cuestionarios, preguntas, contenido, etc... .
+	Buscar funciones de la API Web Service de moodle para dar información más concreta al usuario, diciéndole, por ejemplo, información concreta de cuestionarios, preguntas, contenido, etc....
 	\item
-	Investigar la mejora de tiempos del Web Scripting o incluso buscar una libreria mejor para este proceso. El tiempo que tarda en descargar los log es muy grande y cuanto mas grande es el log aumenta, de tal forma, que puede llegar a bloquear la aplicación.
+	Investigar la mejora de tiempos del Web Scripting o incluso buscar una librería mejor para este proceso. El tiempo que tarda en descargar los log es muy grande y cuánto más grande es el log aumenta, de tal forma, que puede llegar a bloquear la aplicación.
 	\item
-	Como en los log tenemos la ip por donde se han conectado a ubu-virtual, podríamos hacer estadísticas de por donde se conectan las personas o incluso hacer minería con estos datos para saber cuando se conectan mas.
+	Como en los log tenemos la ip por donde se han conectado a ubu-virtual, podríamos hacer estadísticas de por donde se conectan las personas o incluso hacer minería con estos datos para saber cuando se conectan más.
 	\item
-	Añadir mas tipos de gráficos. Hemos metido 3, pero convendría poner mas tipos ya que hay muchos tipos de usuarios y para diferentes datos habrá gustos diferentes de gráficos.
+	Añadir más tipos de gráficos. Hemos metido 3, pero convendría poner más tipos ya que hay muchos tipos de usuarios y para diferentes datos habrá gustos diferentes de gráficos.
 	\item
 	Al descargar el log, hay unos select que nos permite elegir ciertas opciones para filtrar los log y después descargar esos log. Habría que implementar para que el usuario se pueda descargar el log automáticamente modificando esas opciones.
 	\item
