--- a/doc/proyectdoc/tex/3_Conceptos_teoricos.tex
+++ b/doc/proyectdoc/tex/3_Conceptos_teoricos.tex
@@ -1,6 +1,6 @@
 \capitulo{3}{Conceptos teóricos}
 
-Vamos a hablar de los conceptos teóricos aportando nueva información contando la información del tfg anterior de Claudia Martínez Herrero (pag. 6-13, año 2017) \cite{claudia}
+Vamos a hablar de los conceptos teóricos aportando nueva información contando la información del tfg anterior de Claudia Martínez Herrero (página 6-13, año 2017). \cite{claudia}
 
 %\section{API Rest}\label{api-rest}
 
@@ -16,24 +16,24 @@ JavaScript Object Notation (\emph{Json}) es una estructura en formato texto, con
 
 Su estructura seria tal que así:
 
-\imagen{json}{Extructura Json.}
+\imagen{json}{Estructura Json.}
 
 La imagen representa una respuesta del servidor de moodle haciéndole una petición a su WebService.
 
-Para su tratamiento de los datos es similar a un array de objetos, nos podemos mover por el y y almacenar esos datos para nuestro uso futuro, igualmente podemos crear un Json y enviarlo al servidor para que lo trate el, en el caso de que estuviera permitido.
+Para su tratamiento de los datos es similar a un array de objetos, nos podemos mover por él y almacenar esos datos para nuestro uso futuro, igualmente podemos crear un Json y enviarlo al servidor para que lo trate el, en el caso de que estuviera permitido.
 
 \section{Web Scraping}\label{web-scraping}
 
-Web Scraping es una manera de interaccionar con una web y automatizar las interacciones. Su uso habitual es para  el testeo de webs, probar campos, botones, etc.... Pero también podemos utilizarlo para el tratamiento de datos. Hay veces que la web no proporciona una api rest o un archivo con el cual podamos tratar ciertos datos para hacer "x" cosa. En nuestro caso, lo tenemos que utilizar para la descarga automática de un log, en el que si no estamos logeados, no podríamos descargar.
+Web Scraping es una manera de interaccionar con una web y automatizar las interacciones. Su uso habitual es para  el testeo de webs, probar campos, botones, etc.... Pero también podemos utilizarlo para el tratamiento de datos. Hay veces que la web no proporciona una api rest o un archivo con el cual podamos tratar ciertos datos para hacer alguna cosa concreta. En nuestro caso, lo tenemos que utilizar para la descarga automática de un log, en el que si no estamos logueados, no podríamos descargar ningún documento.
 
-El usuario podría ir al registro sin ningún problema y descargarlo, pero también nos interesa, que si el usuario no sabe donde esta el registro o le resulta dificultoso el proceso de descargarlo manualmente, podamos automatizarlo para el.
+El usuario podría ir al registro sin ningún problema y descargarlo, pero también nos interesa, que si el usuario no sabe dónde está el registro o le resulta dificultoso el proceso de descargarlo manualmente, podamos automatizarlo para él.
  
 Lo que hemos hecho es automatizar el proceso que haría el usuario de forma manual. 
  \begin{enumerate}
  	\item 
  	Nos iremos a la url de logueo.
  	\item 
- 	Rellenamos usuario y contraseña y inmediatamente hacemos click en aceptar.
+ 	Rellenamos usuario y contraseña e inmediatamente hacemos click en aceptar.
  	\item 
  	Construimos la url para ir al registro con los filtros para que salgan todos, se puede poner en la url porque moodle, esa búsqueda, hace una petición GET.
  	\item 
@@ -42,7 +42,7 @@ Lo que hemos hecho es automatizar el proceso que haría el usuario de forma manu
  	Recogemos la respuesta que nos da la web y la convertimos en String, en este paso ya tenemos todo el registro almacenado en nuestra aplicación.
  \end{enumerate}
  
-Aunque en nuestra aplicación ya nos logeamos al principio, para este proceso hay que volver a logearse, ya que, es token que nos proporciona el web service de moodle, no es el mismo.
+Aunque en nuestra aplicación ya nos logueamos al principio, para este proceso hay que volver a loguearse, ya que, es token que nos proporciona el web service de moodle, no es el mismo.
 
-Es importante destacar, que este proceso, para el usuario, es transparente. Lo único que va a notar, es que, le cuesta cargar el log mas. En el equipo que se ha desarrollado el proyecto un log de 100 registros es imperceptible pero hacer que se lo descargue automáticamente, todo el proceso son unos 6 segundos aproximadamente.
+Es importante destacar, que este proceso, para el usuario, es transparente. Lo único que va a notar, es que, le cuesta cargar el log más. En el equipo que se ha desarrollado el proyecto un log de 100 registros es imperceptible, pero hacer que se lo descargue automáticamente incrementa el tiempo de forma considerable.
  
