--- a/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
+++ b/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
@@ -5,7 +5,7 @@
 \subsection{Scrum}\label{scrum}
 
 Scrum es un marco de trabajo para el desarrollo de \emph{software} que se
-engloba dentro de las metodologías ágiles. En el se define un conjunto de practicas y roles durante el desarrollo del proyecto. Es una estrategia de trabajo iterativa e incremental a través de iteraciones (\emph{sprints})
+engloba dentro de las metodologías ágiles. En él se define un conjunto de prácticas y roles durante el desarrollo del proyecto. Es una estrategia de trabajo iterativa e incremental a través de iteraciones (\emph{sprints})
 y revisiones. 
 
 Durante el proyecto se han llevado a cabo reuniones semanales con el tutor (\emph{sprints}) y según se iban terminando las tareas (\emph{issue}) se sincronizaba con el repositorio, lo que conlleva, que el tutor y el alumno tuvieran siempre el mismo código y se pudieran solucionar los problemas de forma rápida. \cite{Schwaber2004}
@@ -24,7 +24,7 @@ Se compone de las tres capas con las que lleva su nombre:
 	\item
 	\textit{\textbf{Modelo}}: Los diferentes tipos de datos en los que se compone la aplicación.
 	\item
-	\textit{\textbf{View}}: Como el usuario va a visualizar los datos, una vista no tiene por que ser general para todos, cada usuario puede tener la suya propia.
+	\textit{\textbf{View}}: Como el usuario va a visualizar los datos, una vista no tiene porqué ser general para todos, cada usuario puede tener la suya propia.
 	\item
 	\textit{\textbf{Controlador}}: Comunica la capa modelo con las vistas. Comunica datos del modelo para mostrárselos al usuario.
 \end{itemize}
@@ -42,7 +42,7 @@ Se compone de las tres capas con las que lleva su nombre:
 	Herramienta elegida: \href{https://git-scm.com/}{Git}.
 \end{itemize}
 
-Git es un sistema de control de versiones distribuido. Nos permite tener dos repositorios un repositorio local y otro repositorio remoto, los dos tendrán como rama principal la \emph{master} en el cual, cuando los cambios que hagamos en nuestro repositorio \emph{local} y consideremos que se pueden subir al \emph{master}, podremos subirlo para compartirlo con el equipo. No nos hace falta estar permanentemente conectados a una red como con Subversion. Como no requiere de conexión, nos podríamos retraer a un commit anterior, ya que tenemos el historial de log en nuestro repositorio \emph{local}, sin internet y de forma local.\cite{web:git}
+Git es un sistema de control de versiones distribuido. Nos permite tener dos repositorios, un repositorio local y otro repositorio remoto, los dos tendrán como rama principal la \emph{master}, en la cual, cuando consideremos que los cambios de nuestro repositorio \emph{local} pueden subirse al \emph{master}, podremos subirlo para compartirlo con el equipo.  No nos hace falta estar permanentemente conectados a una red como con Subversion. Como no requiere de conexión, nos podríamos retraer a un commit anterior, ya que tenemos el historial de log en nuestro repositorio \emph{local}, sin internet y de forma local.\cite{web:git}
 
 Git se distribuye bajo la licencia de \emph{software} libre GNU LGPL v2.1.
 
@@ -58,9 +58,7 @@ Git se distribuye bajo la licencia de \emph{software} libre GNU LGPL v2.1.
 	Herramienta elegida: \href{https://github.com/}{GitHub}.
 \end{itemize}
 
-GitHub es una plataforma web donde podemos hospedar nuestro repositorios del proyecto.
-Nos permite todas las  funcionalidades de Git, revisión de commit, revisión de código,
-documentación, gestión de tareas,... . Es
+GitHub es una plataforma web donde podemos hospedar nuestro repositorios del proyecto. Nos permite todas las  funcionalidades de Git, revisión de commit, revisión de código, documentación, gestión de tareas.... Es
 gratuita cuando los proyectos son \emph{open source}.
 
 Con el plugin de Chrome Zedhub, en Github, nos permite tener la funcionalidad de canvas para la organización de tareas, como la plataforma Trello. Como estamos utilizando servicios de integración continua, teniendo el repositorio en Github, nos permite la sincronización solo con nuestra cuenta de Github. \cite{web:github}
@@ -76,9 +74,9 @@ Con el plugin de Chrome Zedhub, en Github, nos permite tener la funcionalidad de
 	Herramienta elegida: \href{https://www.zenhub.com/}{ZenHub}.
 \end{itemize}
 
-ZenHub es un plugin desarrollado para exploradores web para integrar una nueva vista, mas organizativa, en Github. 
+ZenHub es un plugin desarrollado para exploradores web para integrar una nueva vista, más organizativa, en Github. 
 
-Proporciona un tablero canvas en donde cada tarea representada se corresponde con un \emph{issue} o tarea, nativo de GitHub. Cada tarea puede ser organizada en el \emph{sprint} al que pertenece con la asignación de ella, su tiempo estimado de realización, etc.Si el proyecto tiene menos de 5 colaboradores es \emph{open source}. \cite{web:zenhub}
+Proporciona un tablero canvas en donde cada tarea representada se corresponde con un \emph{issue} o tarea, nativo de GitHub. Cada tarea puede ser organizada en el \emph{sprint} al que pertenece con la asignación de ella, su tiempo estimado de realización, etc. Si el proyecto tiene menos de 5 colaboradores es \emph{open source}. \cite{web:zenhub}
 
 
 \section{Entorno de desarrollo integrado
@@ -94,7 +92,7 @@ Eclipse también nos permite funciones de caracterización que nos ahorran horas
 
 \subsubsection{TexStudio}\label{texstudio}
 
-TeXstudio es un editor para crear documentos LaTeX. Nos permite compilar el documento, previsualizarlo, auto-completado, corrección de faltas. Se puede instalar en diferentes sistemas operativos. En el entorno Ubuntu 16.04, la instalación es sencilla, aparte del texStudio solo hay que instalar los paquetes de idiomas y ya podremos empezar a trabajar. \cite{web:texstudio}
+TeXstudio es un editor para crear documentos LaTeX. Nos permite compilar el documento, previsualizarlo, autocompletarlo, corrección de faltas. Se puede instalar en diferentes sistemas operativos. En el entorno Ubuntu 16.04, la instalación es sencilla, aparte del texStudio solo hay que instalar los paquetes de idiomas y ya podremos empezar a trabajar. \cite{web:texstudio}
 
 \subsection{JavaScript y HTML}\label{javascript-y-html}
 
@@ -112,28 +110,13 @@ Es una aplicación con un entorno de desarrollo integrado (\emph{IDE}), nos perm
 Travis es una herramienta de integración continua que esta alojada en la nube y que podemos sincronizarla con github. Esto nos permite, cada vez que hacemos un commit, montar nuestro proyecto y ejecutar las pruebas de forma automatizada, y cuando termine nos enviara un informe del resultado. \cite{web:travis}
 
 
-\subsection{Cobertura de código}\label{cobertura-de-codigo}
-
-\begin{itemize}
-	\tightlist
-	\item
-\end{itemize}
-
-TODAVIA NO CONSIDERADOOOOOOOOWEFQWEFQWE
-QWEFQWEFEQWF
-QWEFQW
-EF
-QWEF
-QWEF
-QWEF
-
-
+%\subsection{Cobertura de código}\label{cobertura-de-codigo}
 
 \subsection{Calidad del código}\label{calidad-del-codigo}
 
 \subsubsection{SonarQube}\label{sonarqube}
 
-SonarQube es una plataforma que tiene versión de escritorio y también esta alojada en la nube, de código abierto. Nos permite la sincronización con nuestro repositorio en GitHub y nos evaluá el código. Permite detectar bugs, código smell, código duplicado, etc. Es muy útil para mejorar el mantenimiento de tu proyecto. \cite{web:sonarqube}
+SonarQube es una plataforma que tiene versión de escritorio y también está alojada en la nube, de código abierto. Nos permite la sincronización con nuestro repositorio en GitHub y nos evalúa el código. Permite detectar bugs, código smell, código duplicado, etc. Es muy útil para mejorar el mantenimiento de tu proyecto. \cite{web:sonarqube}
 
 \section{Sistemas de construcción automática del
 	\emph{software}}\label{sistemas-de-construccion-automuxe1tica-del-software}
@@ -154,7 +137,7 @@ es una librería para la creación de interfaces gráficas en Java.
 
 \subsection{Log4j}\label{log4j}
 
-Log4j es una librería de java desarrollada por la compañía Apache software fundation que nos permite en nuestra aplicación escribir mensajes de registro, como pueden ser errores o warnings. También nos permite configurar el filtrado de mensajes para que el programador pueda ver los tipo de errores que desee. \cite{Java:log}
+Log4j es una librería de java desarrollada por la compañía Apache software fundation que nos permite en nuestra aplicación escribir mensajes de registro, como pueden ser errores o warnings. También nos permite configurar el filtrado de mensajes para que el programador pueda ver los tipos de errores que desee. \cite{Java:log}
 
 \subsection{Httpclient}\label{httpclient}
 
@@ -175,7 +158,7 @@ Commons-csv es una librería creada por Apache software fundation para java, que
 	Herramienta elegida: \href{http://htmlunit.sourceforge.net/}{HtmlUnit}.
 \end{itemize}
 
-HtmlUnit es una librería para java, que nos permite la iteración en paginas web o \emph{web scripting}, nos permite rellenar formularios, hacer click sobre botones, incluso recoger archivos descargados de la web. \cite{Java:htmlunit}
+HtmlUnit es una librería para java, que nos permite la iteración en páginas web o \emph{web scripting}, nos permite rellenar formularios, hacer click sobre botones, incluso recoger archivos descargados de la web. \cite{Java:htmlunit}
 %\subsection{JUnit}\label{junit}
 
 
@@ -186,7 +169,7 @@ HtmlUnit es una librería para java, que nos permite la iteración en paginas we
 
 \subsection{Moodle 3.3}\label{moodle}
 
-\href{https://moodle.org/?lang=es}{Moodle} es una plataforma de gestion de aprendizaje que lo utilizan muchos centros dedicados a la enseñanza, entre ellos, la universidad de Burgos. 
+\href{https://moodle.org/?lang=es}{Moodle} es una plataforma de gestión de aprendizaje que lo utilizan muchos centros dedicados a la enseñanza, entre ellos, la universidad de Burgos. 
 
 \subsection{Mendeley}\label{mendeley}
 
